--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -14,20 +14,20 @@ spec:
     spec:
       containers:
       - name: threat-api
-        image:
+        image: arielizralevitch/threat-api
         env:
         - name: MONGO_HOST
-          value: mongo-0.mongo
+          value: "mongo-0.mongo"
         - name: MONGO_PORT
-          value: 27017
+          value: "27017"
         - name: MONGO_USERNAME
-          value: admin
+          value: "admin"
         - name: MONGO_PASSWORD
-          value: secretpass
+          value: "secretpass"
         - name: MONGO_DB
-          value: threat_db
+          value: "threat_db"
         - name: MONGO_AUTH_SOURCE
-          value: admin
+          value: "admin"
         ports:
         - containerPort: 8000
 
