--- a/k8s/mongo-statefulset.yaml
+++ b/k8s/mongo-statefulset.yaml
@@ -20,11 +20,11 @@ spec:
           - containerPort: 27017
         env:
           - name: MONGO_INITDB_ROOT_USERNAME
-            value: admin
+            value: "admin"
           - name: MONGO_INITDB_ROOT_PASSWORD
-            value: secretpass
+            value: "secretpass"
           - name: MONGO_INITDB_DATABASE
-            value: threat_db
+            value: "threat_db"
         volumeMounts:
         - name: mongo-data
           mountPath: /data/db
