--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: threat-api
-        image: arielizralevitch/threat-api
+        image: arielizralevitch/threat-api:v1
         env:
         - name: MONGO_HOST
           value: "mongo-0.mongo"
